# maple-bot

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml  vcpkg.json
.cargo/: config.toml
.github/workflows/: build.yml
backend/: Cargo.toml  build.rs
backend/proto/: input.proto
backend/resources/: alphabet_94.txt  minimap_nms.onnx  mob.onnx  rune.onnx
backend/src/: array.rs  bridge.rs  buff.rs  context.rs  database.rs  debug.rs  detect.rs  lib.rs  llm.rs  mat.rs  minimap.rs  models.rs  network.rs  pathing.rs  player.rs  player_actions.rs  request_handler.rs  rotator.rs  rpc.rs  skill.rs  task.rs
backend/src/game/: clock.rs  detect.rs  minimap.rs  mod.rs  models.rs  player.rs  skill.rs
backend/src/player/: actions.rs  adjust.rs  adjusting.rs  cash_shop.rs  double_jump.rs  fall.rs  grapple.rs  idle.rs  jump.rs  mod.rs  moving.rs  solve_rune.rs  stall.rs  state.rs  timeout.rs  unstuck.rs  up_jump.rs  use_key.rs
backend/src/profile/: mod.rs
core/: Cargo.toml  build.rs
core/resources/: craft.onnx  minimap.onnx  text_detection.onnx
core/src/: detector.rs  error.rs  main.rs  mat.rs
core/src/game/: clock.rs  detect.rs  detector.rs  mat.rs  minimap.rs  mod.rs  player.rs  skill.rs  state.rs
docs/: customize_input.md  general.md  remote_control.md  troubleshooting.md
examples/python/: input_pb2.py  input_pb2.pyi  input_pb2_grpc.py  kmbox_example.py  main.py  pywinauto_example.py
tools/: install-build-tools.sh  install-cargo-config.sh  install-llvm.sh  install-msvc.sh  install-opencv-toolchain.cmake  install-opencv.sh
ui/: Cargo.toml  Dioxus.toml  build.rs  package-lock.json  package.json
ui/assets/: autoNumeric.min.js  tailwind.css
ui/src/: action.rs  checkbox.rs  configuration.rs  hot_key.rs  icons.rs  input.rs  key.rs  main.rs  minimap.rs  notification.rs  option.rs  platform.rs  platforms.rs  rotation.rs  select.rs  settings.rs  tab.rs
ui/src/components/: button.rs  mod.rs  options.rs
ui/src/js/: header.js  minimap.js
