[workspace]
resolver = "2"
members = ["ui", "backend", "platforms"]

[workspace.dependencies]
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1.43.0", default-features = false, features = ["sync"] }
rand = "0.9.0"
platforms = { path = "platforms" }
backend = { path = "backend" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
