[workspace]
resolver = "2"
members = ["ui", "backend", "platforms"]

[workspace.package]
version = "0.11.0"
edition = "2024"

[workspace.dependencies]
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1.43.1", default-features = false, features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "time",
    "test-util",
] }
rand = "0.9.0"
platforms = { path = "platforms" }
backend = { path = "backend" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
