[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
platforms = { workspace = true }
ort = { version = "2.0.0-rc.9", default-features = false, features = [
    "load-dynamic",
] }
opencv = { version = "0.94.2", default-features = false, features = [
    "dnn",
    "imgcodecs",
    "imgproc",
    "highgui",
] }
anyhow = "1.0.95"
log = "0.4.25"
rand = { workspace = true }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { workspace = true }
serde_json = { version = "1.0.138" }
strum = { version = "0.27", features = ["derive"] }
ordered_hash_map = "0.4.0"

[dev-dependencies]
mockall = "0.13.1"
