[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tonic = "0.13.0"
bit-vec = "0.8"
prost = "0.13"
platforms = { workspace = true }
ort = { version = "2.0.0-rc.9", default-features = false, features = [
    "load-dynamic",
] }
opencv = { version = "0.94.2", default-features = false, features = [
    "dnn",
    "imgcodecs",
    "imgproc",
    "highgui",
] }
anyhow = "1.0.95"
log = "0.4.25"
rand = { workspace = true }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { workspace = true }
serde_json = { version = "1.0.138" }
strum = { workspace = true }
ordered_hash_map = "0.4.0"
dyn-clone = "1.0.19"
reqwest = { version = "0.12.15", features = ["multipart"]}

[build-dependencies]
tonic-build = "*"

[dev-dependencies]
mockall = "0.13.1"
