[package]
name = "ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
backend = { workspace = true }
tokio = { version = "1.43.0" }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
