[package]
name = "ui"
version.workspace = true
edition.workspace = true

[dependencies]
rand = { workspace = true }
tokio = { workspace = true }
dioxus = { version = "0.6.3", features = ["desktop"] }
backend = { workspace = true }
serde = { workspace = true }
tracing-log = "0.2.0"
num-traits = "0.2"
